...
        android:textAlignment="center"
        android:textColor="#000000	"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_cancel_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_value_expense" />

    <ImageButton
        android:id="@+id/Button_date_expense"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_value_expense"
        app:srcCompat="@mipmap/calender_inv_foreground" />

    <CheckBox
        android:id="@+id/checkBox_repeat_expense"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="#FFFFFF"
        android:fontFamily="@font/droid"
        android:text="Wiederkehrend"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/Button_cancel_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_extraCat_expense" />

    <EditText
        android:id="@+id/editText_description_expense"
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:background="#FFFFFF	"
...
        app:layout_constraintEnd_toStartOf="@+id/imageView_extraCat_expense"
        app:layout_constraintStart_toStartOf="@+id/editText_description_expense"
        app:layout_constraintTop_toBottomOf="@+id/imageView_extraCat_expense"
        app:srcCompat="@mipmap/cancel_inv_foreground" />

    <ImageButton
        android:id="@+id/Button_check_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="8dp"
        android:background="#282828"
...
