...
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Kino"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_grocery"
        app:layout_constraintEnd_toEndOf="@+id/Button_cinema"
        app:layout_constraintStart_toStartOf="@+id/Button_cinema"
        app:layout_constraintTop_toBottomOf="@+id/Button_cinema" />

    <TextView
        android:id="@+id/textView_gas"
...
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Lebensmittel"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_travel"
        app:layout_constraintEnd_toEndOf="@+id/Button_grocery"
        app:layout_constraintStart_toStartOf="@+id/Button_grocery"
        app:layout_constraintTop_toBottomOf="@+id/Button_grocery" />

    <TextView
        android:id="@+id/textView_gym"
...
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Bar"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_gas"
        app:layout_constraintEnd_toEndOf="@+id/Button_cash"
        app:layout_constraintStart_toStartOf="@+id/Button_cash"
        app:layout_constraintTop_toBottomOf="@+id/Button_cash" />

    <ImageButton
        android:id="@+id/Button_travel"
        android:layout_width="wrap_content"
...
